# meeting-transcriber

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  WINDOWS_BUILD_GUIDE.md  build-windows-final.sh  build-windows-full.sh  build-windows-simple.sh  build-windows.sh  build-with-docker.sh  error.txt
.github/workflows/: build-release.yml  build-windows-msys2.yml  build-windows.yml
build-windows/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-windows-simple/: CMakeLists.txt
docs/: MODEL_CONVERSION_GUIDE.md
include/: asr_engine.h  audio_processor.h  speaker_diarization.h  transcript_generator.h  utils.h
python/: asr_bridge.py  download_model.py
src/: asr_engine.cpp  audio_processor.cpp  main.cpp  speaker_diarization.cpp  transcript_generator.cpp  utils.cpp
tools/: convert_to_onnx.py  convert_to_onnx_final.py  convert_to_onnx_funasr.py  convert_to_onnx_simple.py
